// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toc remark plugin does not overwrite TOC var if no TOC 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "foo",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 6,
              "line": 3,
              "offset": 10,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 5,
            },
          },
          "type": "inlineCode",
          "value": "bar",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 3,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 5,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "js",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 7,
          "offset": 25,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 12,
        },
      },
      "type": "code",
      "value": "baz",
    },
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "declaration": Node2 {
                "declarations": [
                  Node2 {
                    "end": 47,
                    "id": Node2 {
                      "end": 43,
                      "loc": {
                        "end": {
                          "column": 16,
                          "line": 9,
                          "offset": 43,
                        },
                        "start": {
                          "column": 13,
                          "line": 9,
                          "offset": 40,
                        },
                      },
                      "name": "toc",
                      "range": [
                        40,
                        43,
                      ],
                      "start": 40,
                      "type": "Identifier",
                    },
                    "init": Node2 {
                      "end": 47,
                      "loc": {
                        "end": {
                          "column": 20,
                          "line": 9,
                          "offset": 47,
                        },
                        "start": {
                          "column": 19,
                          "line": 9,
                          "offset": 46,
                        },
                      },
                      "range": [
                        46,
                        47,
                      ],
                      "raw": "1",
                      "start": 46,
                      "type": "Literal",
                      "value": 1,
                    },
                    "loc": {
                      "end": {
                        "column": 20,
                        "line": 9,
                        "offset": 47,
                      },
                      "start": {
                        "column": 13,
                        "line": 9,
                        "offset": 40,
                      },
                    },
                    "range": [
                      40,
                      47,
                    ],
                    "start": 40,
                    "type": "VariableDeclarator",
                  },
                ],
                "end": 48,
                "kind": "const",
                "loc": {
                  "end": {
                    "column": 21,
                    "line": 9,
                    "offset": 48,
                  },
                  "start": {
                    "column": 7,
                    "line": 9,
                    "offset": 34,
                  },
                },
                "range": [
                  34,
                  48,
                ],
                "start": 34,
                "type": "VariableDeclaration",
              },
              "end": 48,
              "loc": {
                "end": {
                  "column": 21,
                  "line": 9,
                  "offset": 48,
                },
                "start": {
                  "column": 0,
                  "line": 9,
                  "offset": 27,
                },
              },
              "range": [
                27,
                48,
              ],
              "source": null,
              "specifiers": [],
              "start": 27,
              "type": "ExportNamedDeclaration",
            },
          ],
          "comments": [],
          "end": 48,
          "loc": {
            "end": {
              "column": 21,
              "line": 9,
              "offset": 48,
            },
            "start": {
              "column": 0,
              "line": 9,
              "offset": 27,
            },
          },
          "range": [
            27,
            48,
          ],
          "sourceType": "module",
          "start": 27,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 22,
          "line": 9,
          "offset": 48,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 27,
        },
      },
      "type": "mdxjsEsm",
      "value": "export const toc = 1;",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 10,
      "offset": 49,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin escapes inline code 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "inlineCode",
          "value": "<Head />",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 24,
              "line": 3,
              "offset": 38,
            },
            "start": {
              "column": 5,
              "line": 3,
              "offset": 19,
            },
          },
          "type": "inlineCode",
          "value": "<Head>Test</Head>",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 24,
          "line": 3,
          "offset": 38,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 15,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 5,
              "offset": 52,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 43,
            },
          },
          "type": "inlineCode",
          "value": "<div />",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 13,
          "line": 5,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 40,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 23,
              "line": 7,
              "offset": 76,
            },
            "start": {
              "column": 4,
              "line": 7,
              "offset": 57,
            },
          },
          "type": "inlineCode",
          "value": "<div> Test </div>",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 23,
          "line": 7,
          "offset": 76,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 54,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 28,
              "line": 9,
              "offset": 105,
            },
            "start": {
              "column": 4,
              "line": 9,
              "offset": 81,
            },
          },
          "type": "inlineCode",
          "value": "<div><i>Test</i></div>",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 28,
          "line": 9,
          "offset": 105,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 78,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 29,
                  "line": 11,
                  "offset": 135,
                },
                "start": {
                  "column": 5,
                  "line": 11,
                  "offset": 111,
                },
              },
              "type": "inlineCode",
              "value": "<div><i>Test</i></div>",
            },
          ],
          "position": {
            "end": {
              "column": 42,
              "line": 11,
              "offset": 148,
            },
            "start": {
              "column": 4,
              "line": 11,
              "offset": 110,
            },
          },
          "title": null,
          "type": "link",
          "url": "/some/link",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 42,
          "line": 11,
          "offset": 148,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 107,
        },
      },
      "type": "heading",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 12,
      "offset": 149,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin exports even with existing name 1`] = `
{
  "children": [
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "declaration": Node2 {
                "declarations": [
                  Node2 {
                    "end": 32,
                    "id": Node2 {
                      "end": 16,
                      "loc": {
                        "end": {
                          "column": 16,
                          "line": 1,
                          "offset": 16,
                        },
                        "start": {
                          "column": 13,
                          "line": 1,
                          "offset": 13,
                        },
                      },
                      "name": "toc",
                      "range": [
                        13,
                        16,
                      ],
                      "start": 13,
                      "type": "Identifier",
                    },
                    "init": Node2 {
                      "elements": [
                        Node2 {
                          "end": 31,
                          "loc": {
                            "end": {
                              "column": 31,
                              "line": 1,
                              "offset": 31,
                            },
                            "start": {
                              "column": 20,
                              "line": 1,
                              "offset": 20,
                            },
                          },
                          "range": [
                            20,
                            31,
                          ],
                          "raw": "'replaceMe'",
                          "start": 20,
                          "type": "Literal",
                          "value": "replaceMe",
                        },
                      ],
                      "end": 32,
                      "loc": {
                        "end": {
                          "column": 32,
                          "line": 1,
                          "offset": 32,
                        },
                        "start": {
                          "column": 19,
                          "line": 1,
                          "offset": 19,
                        },
                      },
                      "range": [
                        19,
                        32,
                      ],
                      "start": 19,
                      "type": "ArrayExpression",
                    },
                    "loc": {
                      "end": {
                        "column": 32,
                        "line": 1,
                        "offset": 32,
                      },
                      "start": {
                        "column": 13,
                        "line": 1,
                        "offset": 13,
                      },
                    },
                    "range": [
                      13,
                      32,
                    ],
                    "start": 13,
                    "type": "VariableDeclarator",
                  },
                ],
                "end": 33,
                "kind": "const",
                "loc": {
                  "end": {
                    "column": 33,
                    "line": 1,
                    "offset": 33,
                  },
                  "start": {
                    "column": 7,
                    "line": 1,
                    "offset": 7,
                  },
                },
                "range": [
                  7,
                  33,
                ],
                "start": 7,
                "type": "VariableDeclaration",
              },
              "end": 33,
              "loc": {
                "end": {
                  "column": 33,
                  "line": 1,
                  "offset": 33,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                  "offset": 0,
                },
              },
              "range": [
                0,
                33,
              ],
              "source": null,
              "specifiers": [],
              "start": 0,
              "type": "ExportNamedDeclaration",
            },
          ],
          "comments": [],
          "end": 33,
          "loc": {
            "end": {
              "column": 33,
              "line": 1,
              "offset": 33,
            },
            "start": {
              "column": 0,
              "line": 1,
              "offset": 0,
            },
          },
          "range": [
            0,
            33,
          ],
          "sourceType": "module",
          "start": 0,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "mdxjsEsm",
      "value": "export const toc = ['replaceMe'];",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 10,
              "line": 3,
              "offset": 44,
            },
            "start": {
              "column": 4,
              "line": 3,
              "offset": 38,
            },
          },
          "type": "text",
          "value": "Thanos",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 10,
          "line": 3,
          "offset": 44,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 35,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 5,
              "offset": 59,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 49,
            },
          },
          "type": "text",
          "value": "Tony Stark",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 14,
          "line": 5,
          "offset": 59,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 46,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 7,
              "offset": 73,
            },
            "start": {
              "column": 5,
              "line": 7,
              "offset": 65,
            },
          },
          "type": "text",
          "value": "Avengers",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 13,
          "line": 7,
          "offset": 73,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 61,
        },
      },
      "type": "heading",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 74,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin handles empty headings 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "text",
          "value": "Ignore this",
        },
      ],
      "depth": 1,
      "position": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    {
      "children": [],
      "depth": 2,
      "position": {
        "end": {
          "column": 3,
          "line": 3,
          "offset": 17,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 15,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "alt": "",
          "position": {
            "end": {
              "column": 21,
              "line": 5,
              "offset": 39,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 22,
            },
          },
          "title": null,
          "type": "image",
          "url": "an-image.svg",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 21,
          "line": 5,
          "offset": 39,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 19,
        },
      },
      "type": "heading",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 6,
      "offset": 40,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin inserts below imports 1`] = `
{
  "children": [
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "end": 34,
              "loc": {
                "end": {
                  "column": 34,
                  "line": 1,
                  "offset": 34,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                  "offset": 0,
                },
              },
              "range": [
                0,
                34,
              ],
              "source": Node2 {
                "end": 33,
                "loc": {
                  "end": {
                    "column": 33,
                    "line": 1,
                    "offset": 33,
                  },
                  "start": {
                    "column": 22,
                    "line": 1,
                    "offset": 22,
                  },
                },
                "range": [
                  22,
                  33,
                ],
                "raw": "'something'",
                "start": 22,
                "type": "Literal",
                "value": "something",
              },
              "specifiers": [
                Node2 {
                  "end": 16,
                  "loc": {
                    "end": {
                      "column": 16,
                      "line": 1,
                      "offset": 16,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "local": Node2 {
                    "end": 16,
                    "loc": {
                      "end": {
                        "column": 16,
                        "line": 1,
                        "offset": 16,
                      },
                      "start": {
                        "column": 7,
                        "line": 1,
                        "offset": 7,
                      },
                    },
                    "name": "something",
                    "range": [
                      7,
                      16,
                    ],
                    "start": 7,
                    "type": "Identifier",
                  },
                  "range": [
                    7,
                    16,
                  ],
                  "start": 7,
                  "type": "ImportDefaultSpecifier",
                },
              ],
              "start": 0,
              "type": "ImportDeclaration",
            },
          ],
          "comments": [],
          "end": 34,
          "loc": {
            "end": {
              "column": 34,
              "line": 1,
              "offset": 34,
            },
            "start": {
              "column": 0,
              "line": 1,
              "offset": 0,
            },
          },
          "range": [
            0,
            34,
          ],
          "sourceType": "module",
          "start": 0,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 35,
          "line": 1,
          "offset": 34,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "mdxjsEsm",
      "value": "import something from 'something';",
    },
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "end": 79,
              "loc": {
                "end": {
                  "column": 43,
                  "line": 3,
                  "offset": 79,
                },
                "start": {
                  "column": 0,
                  "line": 3,
                  "offset": 36,
                },
              },
              "range": [
                36,
                79,
              ],
              "source": Node2 {
                "end": 78,
                "loc": {
                  "end": {
                    "column": 42,
                    "line": 3,
                    "offset": 78,
                  },
                  "start": {
                    "column": 26,
                    "line": 3,
                    "offset": 62,
                  },
                },
                "range": [
                  62,
                  78,
                ],
                "raw": "'something-else'",
                "start": 62,
                "type": "Literal",
                "value": "something-else",
              },
              "specifiers": [
                Node2 {
                  "end": 56,
                  "loc": {
                    "end": {
                      "column": 20,
                      "line": 3,
                      "offset": 56,
                    },
                    "start": {
                      "column": 7,
                      "line": 3,
                      "offset": 43,
                    },
                  },
                  "local": Node2 {
                    "end": 56,
                    "loc": {
                      "end": {
                        "column": 20,
                        "line": 3,
                        "offset": 56,
                      },
                      "start": {
                        "column": 7,
                        "line": 3,
                        "offset": 43,
                      },
                    },
                    "name": "somethingElse",
                    "range": [
                      43,
                      56,
                    ],
                    "start": 43,
                    "type": "Identifier",
                  },
                  "range": [
                    43,
                    56,
                  ],
                  "start": 43,
                  "type": "ImportDefaultSpecifier",
                },
              ],
              "start": 36,
              "type": "ImportDeclaration",
            },
          ],
          "comments": [],
          "end": 79,
          "loc": {
            "end": {
              "column": 43,
              "line": 3,
              "offset": 79,
            },
            "start": {
              "column": 0,
              "line": 3,
              "offset": 36,
            },
          },
          "range": [
            36,
            79,
          ],
          "sourceType": "module",
          "start": 36,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 44,
          "line": 3,
          "offset": 79,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 36,
        },
      },
      "type": "mdxjsEsm",
      "value": "import somethingElse from 'something-else';",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 5,
              "offset": 89,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 84,
            },
          },
          "type": "text",
          "value": "Title",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 9,
          "line": 5,
          "offset": 89,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 81,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 8,
              "line": 7,
              "offset": 98,
            },
            "start": {
              "column": 4,
              "line": 7,
              "offset": 94,
            },
          },
          "type": "text",
          "value": "Test",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 8,
          "line": 7,
          "offset": 98,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 91,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 10,
              "line": 9,
              "offset": 109,
            },
            "start": {
              "column": 5,
              "line": 9,
              "offset": 104,
            },
          },
          "type": "text",
          "value": "Again",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 10,
          "line": 9,
          "offset": 109,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 100,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 11,
              "offset": 119,
            },
            "start": {
              "column": 1,
              "line": 11,
              "offset": 111,
            },
          },
          "type": "text",
          "value": "Content.",
        },
      ],
      "position": {
        "end": {
          "column": 9,
          "line": 11,
          "offset": 119,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 111,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 12,
      "offset": 120,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin outputs empty array for no TOC 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "text",
          "value": "foo",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 6,
              "line": 3,
              "offset": 10,
            },
            "start": {
              "column": 1,
              "line": 3,
              "offset": 5,
            },
          },
          "type": "inlineCode",
          "value": "bar",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 3,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 5,
        },
      },
      "type": "paragraph",
    },
    {
      "lang": "js",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 7,
          "offset": 25,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 12,
        },
      },
      "type": "code",
      "value": "baz",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 26,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin works on non text phrasing content 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "text",
              "value": "Emphasis",
            },
          ],
          "position": {
            "end": {
              "column": 14,
              "line": 1,
              "offset": 13,
            },
            "start": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
          },
          "type": "emphasis",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 17,
                  "line": 3,
                  "offset": 31,
                },
                "start": {
                  "column": 7,
                  "line": 3,
                  "offset": 21,
                },
              },
              "type": "text",
              "value": "Importance",
            },
          ],
          "position": {
            "end": {
              "column": 19,
              "line": 3,
              "offset": 33,
            },
            "start": {
              "column": 5,
              "line": 3,
              "offset": 19,
            },
          },
          "type": "strong",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 19,
          "line": 3,
          "offset": 33,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 15,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "children": [
            {
              "position": {
                "end": {
                  "column": 19,
                  "line": 5,
                  "offset": 53,
                },
                "start": {
                  "column": 6,
                  "line": 5,
                  "offset": 40,
                },
              },
              "type": "text",
              "value": "Strikethrough",
            },
          ],
          "position": {
            "end": {
              "column": 21,
              "line": 5,
              "offset": 55,
            },
            "start": {
              "column": 4,
              "line": 5,
              "offset": 38,
            },
          },
          "type": "delete",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 21,
          "line": 5,
          "offset": 55,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 35,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "attributes": [],
          "children": [
            {
              "position": {
                "end": {
                  "column": 11,
                  "line": 7,
                  "offset": 67,
                },
                "start": {
                  "column": 7,
                  "line": 7,
                  "offset": 63,
                },
              },
              "type": "text",
              "value": "HTML",
            },
          ],
          "name": "i",
          "position": {
            "end": {
              "column": 15,
              "line": 7,
              "offset": 71,
            },
            "start": {
              "column": 4,
              "line": 7,
              "offset": 60,
            },
          },
          "type": "mdxJsxTextElement",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 15,
          "line": 7,
          "offset": 71,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 57,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 19,
              "line": 9,
              "offset": 91,
            },
            "start": {
              "column": 4,
              "line": 9,
              "offset": 76,
            },
          },
          "type": "inlineCode",
          "value": "inline.code()",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 19,
          "line": 9,
          "offset": 91,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 73,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 11,
              "offset": 101,
            },
            "start": {
              "column": 4,
              "line": 11,
              "offset": 96,
            },
          },
          "type": "text",
          "value": "some ",
        },
        {
          "attributes": [
            {
              "name": "className",
              "type": "mdxJsxAttribute",
              "value": "some-class",
            },
            {
              "name": "style",
              "type": "mdxJsxAttribute",
              "value": {
                "data": {
                  "estree": {
                    "body": [
                      {
                        "end": 154,
                        "expression": Node2 {
                          "end": 154,
                          "loc": {
                            "end": {
                              "column": 61,
                              "line": 11,
                              "offset": 154,
                            },
                            "start": {
                              "column": 44,
                              "line": 11,
                              "offset": 137,
                            },
                          },
                          "properties": [
                            Node2 {
                              "computed": false,
                              "end": 153,
                              "key": Node2 {
                                "end": 144,
                                "loc": {
                                  "end": {
                                    "column": 51,
                                    "line": 11,
                                    "offset": 144,
                                  },
                                  "start": {
                                    "column": 45,
                                    "line": 11,
                                    "offset": 138,
                                  },
                                },
                                "name": "border",
                                "range": [
                                  138,
                                  144,
                                ],
                                "start": 138,
                                "type": "Identifier",
                              },
                              "kind": "init",
                              "loc": {
                                "end": {
                                  "column": 60,
                                  "line": 11,
                                  "offset": 153,
                                },
                                "start": {
                                  "column": 45,
                                  "line": 11,
                                  "offset": 138,
                                },
                              },
                              "method": false,
                              "range": [
                                138,
                                153,
                              ],
                              "shorthand": false,
                              "start": 138,
                              "type": "Property",
                              "value": Node2 {
                                "end": 153,
                                "loc": {
                                  "end": {
                                    "column": 60,
                                    "line": 11,
                                    "offset": 153,
                                  },
                                  "start": {
                                    "column": 53,
                                    "line": 11,
                                    "offset": 146,
                                  },
                                },
                                "range": [
                                  146,
                                  153,
                                ],
                                "raw": ""solid"",
                                "start": 146,
                                "type": "Literal",
                                "value": "solid",
                              },
                            },
                          ],
                          "range": [
                            137,
                            154,
                          ],
                          "start": 137,
                          "type": "ObjectExpression",
                        },
                        "loc": {
                          "end": {
                            "column": 61,
                            "line": 11,
                            "offset": 154,
                          },
                          "start": {
                            "column": 44,
                            "line": 11,
                            "offset": 137,
                          },
                        },
                        "range": [
                          137,
                          154,
                        ],
                        "start": 137,
                        "type": "ExpressionStatement",
                      },
                    ],
                    "comments": [],
                    "end": 154,
                    "loc": {
                      "end": {
                        "column": 61,
                        "line": 11,
                        "offset": 154,
                      },
                      "start": {
                        "column": 44,
                        "line": 11,
                        "offset": 137,
                      },
                    },
                    "range": [
                      137,
                      154,
                    ],
                    "sourceType": "module",
                    "start": 137,
                    "type": "Program",
                  },
                },
                "type": "mdxJsxAttributeValueExpression",
                "value": "{border: "solid"}",
              },
            },
          ],
          "children": [
            {
              "position": {
                "end": {
                  "column": 70,
                  "line": 11,
                  "offset": 162,
                },
                "start": {
                  "column": 64,
                  "line": 11,
                  "offset": 156,
                },
              },
              "type": "text",
              "value": "styled",
            },
          ],
          "name": "span",
          "position": {
            "end": {
              "column": 77,
              "line": 11,
              "offset": 169,
            },
            "start": {
              "column": 9,
              "line": 11,
              "offset": 101,
            },
          },
          "type": "mdxJsxTextElement",
        },
        {
          "position": {
            "end": {
              "column": 78,
              "line": 11,
              "offset": 170,
            },
            "start": {
              "column": 77,
              "line": 11,
              "offset": 169,
            },
          },
          "type": "text",
          "value": " ",
        },
        {
          "attributes": [],
          "children": [
            {
              "position": {
                "end": {
                  "column": 93,
                  "line": 11,
                  "offset": 185,
                },
                "start": {
                  "column": 86,
                  "line": 11,
                  "offset": 178,
                },
              },
              "type": "text",
              "value": "heading",
            },
          ],
          "name": "strong",
          "position": {
            "end": {
              "column": 102,
              "line": 11,
              "offset": 194,
            },
            "start": {
              "column": 78,
              "line": 11,
              "offset": 170,
            },
          },
          "type": "mdxJsxTextElement",
        },
        {
          "position": {
            "end": {
              "column": 103,
              "line": 11,
              "offset": 195,
            },
            "start": {
              "column": 102,
              "line": 11,
              "offset": 194,
            },
          },
          "type": "text",
          "value": " ",
        },
        {
          "attributes": [
            {
              "name": "class",
              "type": "mdxJsxAttribute",
              "value": "myClass",
            },
            {
              "name": "className",
              "type": "mdxJsxAttribute",
              "value": "myClassName <> weird char",
            },
            {
              "name": "data-random-attr",
              "type": "mdxJsxAttribute",
              "value": "456",
            },
          ],
          "children": [],
          "name": "span",
          "position": {
            "end": {
              "column": 187,
              "line": 11,
              "offset": 279,
            },
            "start": {
              "column": 103,
              "line": 11,
              "offset": 195,
            },
          },
          "type": "mdxJsxTextElement",
        },
        {
          "position": {
            "end": {
              "column": 192,
              "line": 11,
              "offset": 284,
            },
            "start": {
              "column": 187,
              "line": 11,
              "offset": 279,
            },
          },
          "type": "text",
          "value": " test",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 192,
          "line": 11,
          "offset": 284,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 93,
        },
      },
      "type": "heading",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 12,
      "offset": 285,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin works on text content 1`] = `
{
  "children": [
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "text",
          "value": "Endi",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "heading",
    },
    {
      "lang": "md",
      "meta": null,
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 38,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 10,
        },
      },
      "type": "code",
      "value": "## This is ignored",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 8,
              "line": 7,
              "offset": 47,
            },
            "start": {
              "column": 4,
              "line": 7,
              "offset": 43,
            },
          },
          "type": "text",
          "value": "Endi",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 8,
          "line": 7,
          "offset": 47,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 40,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 12,
              "line": 9,
              "offset": 60,
            },
            "start": {
              "column": 1,
              "line": 9,
              "offset": 49,
            },
          },
          "type": "text",
          "value": "Lorem ipsum",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 9,
          "offset": 60,
        },
        "start": {
          "column": 1,
          "line": 9,
          "offset": 49,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 13,
              "line": 11,
              "offset": 74,
            },
            "start": {
              "column": 5,
              "line": 11,
              "offset": 66,
            },
          },
          "type": "text",
          "value": "Yangshun",
        },
      ],
      "depth": 3,
      "position": {
        "end": {
          "column": 13,
          "line": 11,
          "offset": 74,
        },
        "start": {
          "column": 1,
          "line": 11,
          "offset": 62,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 18,
              "line": 13,
              "offset": 93,
            },
            "start": {
              "column": 1,
              "line": 13,
              "offset": 76,
            },
          },
          "type": "text",
          "value": "Some content here",
        },
      ],
      "position": {
        "end": {
          "column": 18,
          "line": 13,
          "offset": 93,
        },
        "start": {
          "column": 1,
          "line": 13,
          "offset": 76,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 16,
              "line": 15,
              "offset": 110,
            },
            "start": {
              "column": 4,
              "line": 15,
              "offset": 98,
            },
          },
          "type": "text",
          "value": "I ♥ unicode.",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 16,
          "line": 15,
          "offset": 110,
        },
        "start": {
          "column": 1,
          "line": 15,
          "offset": 95,
        },
      },
      "type": "heading",
    },
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "declaration": Node2 {
                "declarations": [
                  Node2 {
                    "end": 130,
                    "id": Node2 {
                      "end": 126,
                      "loc": {
                        "end": {
                          "column": 14,
                          "line": 17,
                          "offset": 126,
                        },
                        "start": {
                          "column": 13,
                          "line": 17,
                          "offset": 125,
                        },
                      },
                      "name": "c",
                      "range": [
                        125,
                        126,
                      ],
                      "start": 125,
                      "type": "Identifier",
                    },
                    "init": Node2 {
                      "end": 130,
                      "loc": {
                        "end": {
                          "column": 18,
                          "line": 17,
                          "offset": 130,
                        },
                        "start": {
                          "column": 17,
                          "line": 17,
                          "offset": 129,
                        },
                      },
                      "range": [
                        129,
                        130,
                      ],
                      "raw": "1",
                      "start": 129,
                      "type": "Literal",
                      "value": 1,
                    },
                    "loc": {
                      "end": {
                        "column": 18,
                        "line": 17,
                        "offset": 130,
                      },
                      "start": {
                        "column": 13,
                        "line": 17,
                        "offset": 125,
                      },
                    },
                    "range": [
                      125,
                      130,
                    ],
                    "start": 125,
                    "type": "VariableDeclarator",
                  },
                ],
                "end": 131,
                "kind": "const",
                "loc": {
                  "end": {
                    "column": 19,
                    "line": 17,
                    "offset": 131,
                  },
                  "start": {
                    "column": 7,
                    "line": 17,
                    "offset": 119,
                  },
                },
                "range": [
                  119,
                  131,
                ],
                "start": 119,
                "type": "VariableDeclaration",
              },
              "end": 131,
              "loc": {
                "end": {
                  "column": 19,
                  "line": 17,
                  "offset": 131,
                },
                "start": {
                  "column": 0,
                  "line": 17,
                  "offset": 112,
                },
              },
              "range": [
                112,
                131,
              ],
              "source": null,
              "specifiers": [],
              "start": 112,
              "type": "ExportNamedDeclaration",
            },
          ],
          "comments": [],
          "end": 131,
          "loc": {
            "end": {
              "column": 19,
              "line": 17,
              "offset": 131,
            },
            "start": {
              "column": 0,
              "line": 17,
              "offset": 112,
            },
          },
          "range": [
            112,
            131,
          ],
          "sourceType": "module",
          "start": 112,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 20,
          "line": 17,
          "offset": 131,
        },
        "start": {
          "column": 1,
          "line": 17,
          "offset": 112,
        },
      },
      "type": "mdxjsEsm",
      "value": "export const c = 1;",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 18,
      "offset": 132,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`toc remark plugin works with imported markdown 1`] = `
{
  "children": [
    {
      "data": {
        "estree": Node2 {
          "body": [
            Node2 {
              "end": 36,
              "loc": {
                "end": {
                  "column": 36,
                  "line": 1,
                  "offset": 36,
                },
                "start": {
                  "column": 0,
                  "line": 1,
                  "offset": 0,
                },
              },
              "range": [
                0,
                36,
              ],
              "source": Node2 {
                "end": 35,
                "loc": {
                  "end": {
                    "column": 35,
                    "line": 1,
                    "offset": 35,
                  },
                  "start": {
                    "column": 20,
                    "line": 1,
                    "offset": 20,
                  },
                },
                "range": [
                  20,
                  35,
                ],
                "raw": "'./_partial.md'",
                "start": 20,
                "type": "Literal",
                "value": "./_partial.md",
              },
              "specifiers": [
                Node2 {
                  "end": 14,
                  "loc": {
                    "end": {
                      "column": 14,
                      "line": 1,
                      "offset": 14,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "local": Node2 {
                    "end": 14,
                    "loc": {
                      "end": {
                        "column": 14,
                        "line": 1,
                        "offset": 14,
                      },
                      "start": {
                        "column": 7,
                        "line": 1,
                        "offset": 7,
                      },
                    },
                    "name": "Partial",
                    "range": [
                      7,
                      14,
                    ],
                    "start": 7,
                    "type": "Identifier",
                  },
                  "range": [
                    7,
                    14,
                  ],
                  "start": 7,
                  "type": "ImportDefaultSpecifier",
                },
              ],
              "start": 0,
              "type": "ImportDeclaration",
            },
          ],
          "comments": [],
          "end": 36,
          "loc": {
            "end": {
              "column": 36,
              "line": 1,
              "offset": 36,
            },
            "start": {
              "column": 0,
              "line": 1,
              "offset": 0,
            },
          },
          "range": [
            0,
            36,
          ],
          "sourceType": "module",
          "start": 0,
          "type": "Program",
        },
      },
      "position": {
        "end": {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "mdxjsEsm",
      "value": "import Partial from './_partial.md';",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 10,
              "line": 3,
              "offset": 47,
            },
            "start": {
              "column": 4,
              "line": 3,
              "offset": 41,
            },
          },
          "type": "text",
          "value": "Thanos",
        },
      ],
      "depth": 2,
      "position": {
        "end": {
          "column": 10,
          "line": 3,
          "offset": 47,
        },
        "start": {
          "column": 1,
          "line": 3,
          "offset": 38,
        },
      },
      "type": "heading",
    },
    {
      "children": [
        {
          "position": {
            "end": {
              "column": 4,
              "line": 5,
              "offset": 52,
            },
            "start": {
              "column": 1,
              "line": 5,
              "offset": 49,
            },
          },
          "type": "text",
          "value": "Foo",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 5,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 49,
        },
      },
      "type": "paragraph",
    },
    {
      "attributes": [],
      "children": [],
      "name": "Partial",
      "position": {
        "end": {
          "column": 12,
          "line": 7,
          "offset": 65,
        },
        "start": {
          "column": 1,
          "line": 7,
          "offset": 54,
        },
      },
      "type": "mdxJsxFlowElement",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 66,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
